--- a/Hirakana WatchKit App/Base.lproj/Interface.storyboard
+++ b/Hirakana WatchKit App/Base.lproj/Interface.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14810.12" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NBu-mt-KyX">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14865.1" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NBu-mt-KyX">
     <device id="watch38"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14766.15"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14619.8"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14819.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14642"/>
     </dependencies>
     <scenes>
         <!--Main Controller-->
@@ -11,18 +11,18 @@
             <objects>
                 <hostingController hidesWhenLoading="NO" id="NBu-mt-KyX" customClass="MainController" customModule="Hirakana_WatchKit_Extension">
                     <connections>
-                        <segue destination="JHA-ZX-AQs" kind="relationship" relationship="nextPage" id="tg9-kU-0iI"/>
+                        <segue destination="JHA-ZX-AQs" kind="relationship" relationship="nextPage" id="p8w-gK-sbz"/>
                     </connections>
                 </hostingController>
             </objects>
-            <point key="canvasLocation" x="187" y="141"/>
+            <point key="canvasLocation" x="187" y="319"/>
         </scene>
-        <!--Settings Controller-->
+        <!--SettingsController-->
         <scene sceneID="dTq-Bx-zOD">
             <objects>
-                <hostingController hidesWhenLoading="NO" id="JHA-ZX-AQs" customClass="SettingsController" customModule="Hirakana_WatchKit_Extension"/>
+                <hostingController identifier="SettingsController" hidesWhenLoading="NO" id="JHA-ZX-AQs" customClass="SettingsController" customModule="Hirakana_WatchKit_Extension"/>
             </objects>
-            <point key="canvasLocation" x="460" y="141"/>
+            <point key="canvasLocation" x="468" y="319"/>
         </scene>
     </scenes>
 </document>
