--- a/Hirakana WatchKit App/Base.lproj/Interface.storyboard
+++ b/Hirakana WatchKit App/Base.lproj/Interface.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14865.1" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NBu-mt-KyX">
-    <device id="watch38"/>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14868" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NBu-mt-KyX">
+    <device id="watch42"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14819.2"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14642"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14643"/>
     </dependencies>
     <scenes>
         <!--Main Controller-->
@@ -23,6 +23,28 @@
                 <hostingController identifier="SettingsController" hidesWhenLoading="NO" id="JHA-ZX-AQs" customClass="SettingsController" customModule="Hirakana_WatchKit_Extension"/>
             </objects>
             <point key="canvasLocation" x="468" y="319"/>
+        </scene>
+        <!--Static Notification Interface Controller-->
+        <scene sceneID="bqx-GZ-0hX">
+            <objects>
+                <notificationController initiallyAnimated="NO" id="kKU-PW-JYt">
+                    <items>
+                        <label alignment="left" text="Sample Text" textAlignment="left" numberOfLines="3" minimumScaleFactor="0.90000000000000002" id="Vin-ZE-xUP">
+                            <color key="textColor" white="0.12532106164383561" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="font" type="system" weight="light" pointSize="16"/>
+                        </label>
+                    </items>
+                    <notificationCategory key="notificationCategory" id="rDA-tV-ONE">
+                        <color key="titleColor" red="0.96307899746192893" green="0.95584915701633955" blue="0.96154555899981498" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="sashColor" red="0.36630171540000001" green="0.49896097179999999" blue="0.80185466999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </notificationCategory>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="notificationAlertLabel" destination="Vin-ZE-xUP" id="JHj-wZ-dCF"/>
+                    </connections>
+                </notificationController>
+            </objects>
+            <point key="canvasLocation" x="187" y="670"/>
         </scene>
     </scenes>
 </document>
